k8s/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: example-stack
spec:
  ingressClassName: traefik
  rules:
    - host: example-stack.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  namespace: example-stack
spec:
  ingressClassName: traefik
  rules:
    - host: goapi.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-inventory
  namespace: example-stack
spec:
  ingressClassName: traefik
  rules:
    - host: rust.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rust-inventory
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: example-stack
spec:
  ingressClassName: traefik
  rules:
    - host: ui.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  name: http
